[tool.poetry]
name = "advent-of-code-2020"
version = "0.1.0"
description = "Solutions for advent of code 2020"
authors = ["Dileep Kishore <k.dileep1994@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.9"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
flake8 = "^3.8.4"
mypy = "^0.790"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
